[ADD] New sync branch 3

--- a/.github/workflows/sync_fork.yml
+++ b/.github/workflows/sync_fork.yml
@@ -3,7 +3,7 @@ name: Sync Forks
 on:
   push:
     branches:
-    - sync-fork-bot
+    - sync_fork
   schedule:
     - cron: '*/5 * * * *'
   workflow_dispatch:
